tests/semantic/type_dupl/type_dupl.err
Error: Redefinition of type Type in file type_dupl.dl at line 4
.type Type <: symbol
^--------------------
Previous definition in file type_dupl.dl at line 3
.type Type <: symbol
^--------------------
1 errors generated, evaluation aborted
